# EstrAlg-Python

./: CONVENTIONS.md  Coding Style Guide.md  CondingStyle.md  LICENSE  README.md  YES  pyproject.toml  pytest.ini  query 0 2
src/01_ADTS/: Exercises.md  __init__.py  point2DCartesian.py  point2DPolar.py  stringDemo.py
src/02_ESTBASICAS/: __init__.py
src/03_ALGANA/: __init__.py
src/04_UF/: Exercises.md  QuickFind.py  QuickUnion.py  UnionFind.py  WeightedQuickUnion.py  __init__.py
src/06_PRIORITYQUEUE/: Exercises.md  __init__.py  binary_heap.py  binary_heap_tests.py  binomial_heap.py  binomial_heap_tests.py  fibonacci_heap.py
src/08_BST/: Exercises.md  README.md  __init__.py  bst.py  red_black_st.py  red_black_st_tests.py  test_bst.py  test_red_black_st.py  test_red_black_st_deletion.py
src/09_HASHTABLE/: test_chained_st.py
src/c01_ADTS/: Exercises.md  FechaDataclass.py  fecha.py  persona.py  point2D.py  point2D_tests.py
src/c02_ESTBASICAS/: DoublyLinkedList.py  Exercises.md  LinkedList.py  Queue.py  Stack.py
src/c04_UF/: Exercises.md  QuickFind.py  QuickUnion.py  WeightedQuickUnion.py  __init__.py
src/c05_SORT/: CountSort.py  Exercises.md  InsertionSort.py  MergeSort.py  Mindmap.md  QuickSort.py  RadixSort.py  SelectionSort.py  ShellSort.py  SortingComparison.py  __init__.py
src/c06_PRIORITYQUEUE/: Exercises.md  __init__.py  binomial_heap_tests.py  fibonacci_heap.py  fibonacci_heap_tests.py
src/c07_SEARCH/: BinarySearch.py  BinarySearch_tests.py  Exercises.md  SequentialSearch.py  SequentialSearch_tests.py  __init__.py
src/c08_BST/: Exercises.md  (+5 more)
(+8 files in other folders)
