[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "package"
version = "0.1.0"
description = "Data Structures and Algorithms Examples and Exercises"
dependencies = []

[project.urls]
Homepage = "https://example.com" 

[tool.setuptools.packages]
find = { where = ["src"] }